# windings

./: Cargo.toml  README.md
src/: dxgi.rs  lib.rs
src/safe_wrappers/: error_handling_api.rs  mod.rs  unknown.rs
src/type_wrappers/: conversion.rs  error_handling_api.rs  error_report.rs  mod.rs  type_conversion.rs  wer_api.rs  window.rs  window_class.rs
src/type_wrappers/app_recovery_restart/: mod.rs  winbase.rs
src/type_wrappers/error_reporting/: error_report.rs  mod.rs  wer_api.rs
src/type_wrappers/event_collector/: event_collector.rs  mod.rs
src/type_wrappers/performance_counters/: mod.rs  pdh.rs  perf_lib.rs  win_perf.rs
src/type_wrappers/trace_logging/: mod.rs  trace_logging_activity.rs  trace_logging_provider.rs
